<resources>

    <string name="app_name">LJSDKDemo_1.5.3</string>
    <string name="login_button_txt">登录</string>
    <string name="logout_button_txt">登出</string>
    <string name="checklogin_button_txt">登录验证</string>
    <string name="pay_button_txt">定额支付</string>
    <string name="exit_button_txt">退出</string>
    <string name="hello_world">用户登录信息：</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AAADemo</string>
    <string name="help_tips">初始化</string>

</resources>
